--- a/build.gradle
+++ b/build.gradle
@@ -37,7 +37,10 @@ dependencies {
 
     // https://mvnrepository.com/artifact/org.springframework.security/spring-security-core
     implementation group: 'org.springframework.security', name: 'spring-security-core', version: '5.4.3'
-
+    //json vs jwt
+    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.13.4.2'
+    implementation group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.0'
+    implementation "com.fasterxml.jackson.core:jackson-databind:"
 }
 
 tasks.named('test') {
