--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,34 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/register_spr
-spring.datasource.username=root
-spring.datasource.password=D110220q
+#spring.datasource.url=jdbc:mysql://localhost:3306/register_spr
+#spring.datasource.username=root
+#spring.datasource.password=D110220q
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+##Hibernate
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+#spring.jpa.properties.hibernate.id.new_generator_mappings = true
+#spring.jpa.properties.hibernate.show.sql = true
+#spring.jpa.properties.hibernate.format_sql = true
+#spring.jpa.generate-ddl=true
+#spring.jpa.properties.hibernate.hb2dll.auto = update
+#logging.level.org.hibernate.SQL=DEBUG
+#logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+
+#CAU HINH DEPLOY HEROKU#
+
+
+spring.jpa.hibernate.ddl-auto=update
+spring.profiles.active=production
+spring.thymeleaf.mode=HTML
+logging.level.org.springframework=INFO
+server.port=${PORT:5000}
+spring.datasource.url=jdbc:mysql://b253df3dff74da:efcd4477@eu-cdbr-west-03.cleardb.net/heroku_5636bdb44c76aee?reconnect=true&characterEncoding=UTF-8
+spring.datasource.username=bed1c0de76cacb
+spring.datasource.password=4a51d88e
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#Hibernate
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
-spring.jpa.properties.hibernate.id.new_generator_mappings = true
-spring.jpa.properties.hibernate.show.sql = true
-spring.jpa.properties.hibernate.format_sql = true
-spring.jpa.generate-ddl=true
-spring.jpa.properties.hibernate.hb2dll.auto = update
-logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+spring.datasource.hikari.connection-timeout=30000
+spring.datasource.hikari.maximum-pool-size=10
+spring.jpa.open-in-view=false
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+debug=true
+spring.jpa.properties.hibernate.diale= org.hibernate.dialect.MySQL5Dialect
